13/06/2007
mohij
- Improved support for MapExpressions. All Doom3-related
  keywords like addnormals(), makeIntensity(), etc.
  are correctly recognised and processed (recursively).

24/05/2007
greebo
- Added sound playback ability to SoundManager module,
  sounds can be previewed via the SoundChooser GUI.

12/05/2007
greebo
- Removed templated TypeCast system in favour of dynamic_cast<>.

01/05/2007
greebo
- Fixed insert/delete patch rows and columns command and added 
  "Append rows/columns" feature (extrapolation).

** RELEASE 0.9.0

29/04/2007
OrbWeaver
- Property editors for Sound, Model, Skin and Texture selection no longer 
  require explicit Apply button.
- Static models use GL Display Lists for improved rendering performance.

16/04/2007
greebo
- Added Stim/Response Editor plugin (The Dark Mod-specific)

12/04/2007
greebo
- Added support for DXT5 RxGB DDS files.

08/04/2007
OrbWeaver
- Added SoundSelector to choose sound shaders via the Entity Inspector

23/03/2007
greebo
- Removed old preference system completely in favour of the XMLRegistry.
- Game Selection at startup is hopefully handled more userfriendly.

15/03/2007
greebo
- Added "Jump to Object" mouse command (Alt-RMB) to jump to 
  the clicked object in the camview.

14/03/2007
greebo
- Removed old TextureClipboard in favour of the new ShaderClipboard. 
  Added Copy/Paste Shader commands to the menu / removed the old ones.

13/03/2007
OrbWeaver
- Added axis rotation to model preview so that models are displayed front-on 
  rather than top-down.
- Per-instance model skinning allows instances of the same model to have a
  different skin.

12/03/2007
greebo
- Added Load/Save Prefab commands and fixed their handling of entity child 
  brushes.

09/03/2007
greebo
- Replaced ArbitraryRotation and ArbitraryScale dialogs with new 
  TransformationDialog.

08/03/2007
greebo
- Rewrote broken "Find & Replace Shader" dialog.

06/03/2007
greebo